randomizer-desktop/randomizer/src/main/resources/de/bsommerfeld/randomizer/ui/application.css
/* ... */
.settings-apply-button:pressed {
    -fx-scale-x: 0.95;
    -fx-scale-y: 0.95;
    -fx-cursor: hand;
}

/* Builder View */

/* Builder Actions View */

/* Pseudo Class */
.text-field:empty {
    -fx-alignment: center;
}

.text-field:empty:focused {
    -fx-alignment: center-left;
}

.actions-selector {
    -fx-pref-width: 504;
    -fx-pref-height: 148;
    -fx-background-radius: 8;
    -fx-alignment: center;
    -fx-background-color: #E6E5FF;
}

.actions-categories {
    -fx-pref-width: 504;
    -fx-pref-height: 22;
    -fx-spacing: 6;
    -fx-padding: 4 12 4 0;
    -fx-alignment: center;
}

.actions-category {
    -fx-font-family: SansSerif;
    -fx-font-size: 14;
    -fx-text-fill: #7E78ED;
    -fx-background-color: transparent;
    -fx-cursor: hand;
}

.actions-category:hover, .actions-category:selected {
    -fx-font-family: SansSerif;
    -fx-font-size: 14;
    -fx-text-fill: #3129D6;
    -fx-background-color: transparent;
}

.actions-category:selected {
    -fx-underline: true;
}

.actions-category-searchfield {
    -fx-pref-width: 152;
    -fx-pref-height: 14;
    -fx-font-family: SansSerif;
    -fx-font-size: 14;
    -fx-prompt-text-fill: #A9A5F3;
    -fx-text-fill: #3129D6;
    -fx-background-radius: 4;
    -fx-background-color: #D6D6F5;
}

.actions-container {
    -fx-pref-width: 480;
    -fx-pref-height: 126;
    -fx-alignment: center;
    -fx-hgap: 12;
    -fx-vgap: 12;
    -fx-padding: 12 8;
}

.builder-actions-title {
    -fx-padding: 0 3;
    -fx-background-radius: 4;
    -fx-background-color: #D6D4F7;
    -fx-font-family: SansSerif;
    -fx-font-size: 14;
    -fx-text-fill: #7E78ED;
}

/* Builder Filler View */
.builder-config-indicator {
    -fx-pref-width: 162;
    -fx-spacing: 6;
    -fx-alignment: center;
}

.builder-filler-text {
    -fx-font-family: SansSerif;
    -fx-font-size: 16;
    -fx-text-fill: #A9A5F3;
}

.builder-config-indicator-label {
    -fx-font-family: SansSerif;
    -fx-font-size: 14;
    -fx-text-fill: #A50E0E;
}

.builder-config-hyperlink {
    -fx-background-color: transparent;
    -fx-font-family: SansSerif;
    -fx-font-size: 14;
    -fx-text-fill: #0800FF;
    -fx-cursor: hand;
}

.builder-config-hyperlink:focused {
    -fx-border-color: transparent;
    -fx-background-color: transparent;
}

/* Settings View */
.settings-container {
    -fx-max-width: 632;
    -fx-pref-height: 360;
    -fx-background-radius: 8;
    -fx-background-color: #EBEBFA;
}

.settings-selection {
    -fx-pref-width: 412;
    -fx-min-height: 344;
    -fx-padding: 0 6;
    -fx-background-color: #9C99FF;
    -fx-background-radius: 8 0 0 8;
    -fx-alignment: center-right;
}

.settings-selection-container {
    -fx-max-width: 148;
    -fx-pref-height: 344;
    -fx-spacing: 6;
    -fx-alignment: center-left;
}

.settings-options {
    -fx-min-width: 148;
    -fx-padding: 0 6;
    -fx-alignment: center-left;
    -fx-font-family: SansSerif;
    -fx-font-size: 15;
    -fx-text-fill: #040316;
    -fx-background-radius: 4;
    -fx-background-color: transparent;
    -fx-cursor: hand;
}

.settings-options:hover {
    -fx-background-color: #DDDBFF;
}

.settings-options:selected {
    -fx-background-color: #CFCCFF;
}

.settings-options:pressed {
    -fx-background-color: #ADA9EF;
}

.updater-settings {
    -fx-pref-width: 480;
    -fx-pref-height: 344;
    -fx-spacing: 12;
    -fx-alignment: center-left;
}

.settings-auto-update {
    -fx-max-width: 463;
}

.settings-auto-update-container {
    -fx-max-width: 463;
    -fx-spacing: 4;
    -fx-alignment: center-left;
}

.settings-title {
    -fx-font-family: SansSerif;
    -fx-font-size: 14;
    -fx-text-fill: #040316;
}

.settings-description {
    -fx-font-family: SansSerif;
    -fx-font-size: 14;
    -fx-text-fill: #7E78ED;
}

.settings-toggle-button-container {
    -fx-pref-width: 48;
    -fx-pref-height: 16;
    -fx-alignment: center-right;
}

.settings-toggle-button {
    -fx-pref-width: 30;
    -fx-max-height: 16;
    -fx-background-radius: 8;
    -fx-padding: 1 15 1 2;
    -fx-background-color: #ADA9EF;
    -fx-background-insets: 0;
    -fx-graphic: url("../images/settingsView/uncheckIcon.png");
    -fx-cursor: hand;
}

.settings-toggle-button:selected {
    -fx-pref-width: 30;
    -fx-max-height: 16;
    -fx-background-radius: 8;
    -fx-padding: 1 2 1 15;
    -fx-background-color: #2F27CE;
    -fx-background-insets: 0;
    -fx-graphic: url("../images/settingsView/checkIcon.png");
}

.settings-separator, .settings-separator .line {
    -fx-max-width: 463;
    -fx-pref-height: 1;
    -fx-background-color: #CECCFF;
    -fx-border-color: null;
}

.settings-update-repo {
    -fx-pref-width: 480;
    -fx-pref-height: 32;
    -fx-spacing: 4;
    -fx-alignment: center-left;
}

.settings-repo-link {
    -fx-font-family: SansSerif;
    -fx-font-size: 14;
    -fx-text-fill: #0800FF;
}

.settings-repo-link:hover {
    -fx-text-fill: #2F27CE;
    -fx-underline: true;
    -fx-cursor: hand;
}

.settings-check-for-update {
    -fx-pref-width: 480;
    -fx-pref-height: 58;
    -fx-spacing: 4;
    -fx-alignment: center-left;
}

.settings-check-update-button {
    -fx-pref-width: 112;
    -fx-pref-height: 20;
    -fx-padding: 3 6;
    -fx-background-radius: 4;
    -fx-text-fill: #EAE9FC;
    -fx-text-alignment: center;
    -fx-font-family: SansSerif;
    -fx-font-size: 14;
    -fx-background-color: #443DFF;
    -fx-cursor: hand;
}

.settings-check-update-button:pressed {
    -fx-scale-x: 0.95;
    -fx-scale-y: 0.95;
}

.sync-path-container {
    -fx-pref-width: 480;
    -fx-pref-height: 16;
    -fx-spacing: 4;
    -fx-alignment: center-left;
}

.sync-config-path, .sync-config-path-failed {
    -fx-min-width: 16;
    -fx-max-width: 16;
    -fx-min-height: 16;
    -fx-max-height: 16;
    -fx-background-color: transparent;
    -fx-cursor: hand;
}

.sync-config-path {
    -fx-graphic: url("../images/settingsView/syncPathIcon.png");
}
/* ... */

